--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+    <title>Redirecting...</title>
+    <link rel="canonical" href="https://mineiro.io" />
+    <meta charset="utf-8" />
+    <meta http-equiv="refresh" content="0; url=https://mineiro.io" />
+  </head>
+  <body>
+    <p>Redirecting...</p>
+  </body>
 </html>
